First steps with context menus

--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -22,3 +22,4 @@
 @import "grid_view.css";
 @import "selection_list_view.css";
 @import "image_title_description_button.css";
+@import "context_menu.css";
