--- a/src/main/resources/css/ui/panel/command_list_panel.css
+++ b/src/main/resources/css/ui/panel/command_list_panel.css
@@ -2,18 +2,24 @@
     -fx-background-color: transparent;
     -fx-padding: 0px;
 }
-
 .command-list-view .list-cell:even {
     -fx-background-color: transparent;
 }
 .command-list-view .list-cell:odd {
     -fx-background-color: #eeeeee;
 }
+.command-list-view .list-cell:deleted {
+    -fx-background-color: -red-gradient;
+}
+
 .command-list-view .list-cell:filled:selected{
     -fx-background-color: -green-gradient;
 }
-.command-list-view .list-cell:filled:selected .label{
+.command-list-view .list-cell:filled:selected .label, .command-list-view .list-cell:filled:deleted .label{
     -fx-text-fill: black;
+}
+.command-list-view .list-cell:filled:selected:deleted {
+    -fx-background-color: -blue-gradient;
 }
 
 .command-list-view .scroll-bar .increment-arrow,
