--- a/src/main/resources/layouts/search_dialog.fxml
+++ b/src/main/resources/layouts/search_dialog.fxml
@@ -18,7 +18,7 @@
                         <Insets />
                      </HBox.margin>
                      <image>
-                        <Image url="@../assets/logo_search.png" />
+                        <Image url="@../assets/searchlogo.png" />
                      </image>
                   </ImageView>
                </children>
