--- a/src/main/resources/css/control_panel/layout_editor/section_bar.css
+++ b/src/main/resources/css/control_panel/layout_editor/section_bar.css
@@ -1,6 +1,6 @@
 .app_scroll_pane_container {
     -fx-background-color: linear-gradient(to bottom right, -start-green-gradient, -stop-green-gradient);
-    -fx-effect: innershadow(gaussian, rgba(0,0,0, 0.3), 7, 0, 0, 0);
+    -fx-effect: innershadow(one-pass-box, rgba(0,0,0, 0.3), 7, 0, 0, 0);
     -fx-pref-height: 72px;
 }
 
