--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -23,3 +23,4 @@
 @import "selection_list_view.css";
 @import "image_title_description_button.css";
 @import "context_menu.css";
+@import "progressbar.css";
