Improve drag dropping indication

--- a/src/main/resources/css/control_panel/layout_editor/buttons.css
+++ b/src/main/resources/css/control_panel/layout_editor/buttons.css
@@ -44,6 +44,10 @@
     -fx-text-fill: white;
 }
 
+.drag-error{
+    -fx-background-color: -red-gradient;
+}
+
 .empty-btn.drag-entered  {
     -fx-border-color: white;
     -fx-background-insets: 4px;
