Add buttons in command edit dialog

--- a/src/main/resources/css/ui/ui.css
+++ b/src/main/resources/css/ui/ui.css
@@ -9,7 +9,7 @@
 @import "toggle_button.css";
 @import "rounded_button.css";
 @import "floating_action_button.css";
-@import "save_button.css";
+@import "styled_button.css";
 @import "styled_text_field.css";
 @import "styled_text_area.css";
 @import "image_selector.css";
